# DrivenByMoss4Reaper-Backend

./: .gitignore  build-macos.sh  build.cmd  build.sh  reaper_drivenbymoss.sln
.github/workflows/: cmake.yml
CMake/: CMakeLists.txt  DefaultCXX.cmake  Utils.cmake
Linux/: .cproject  .project
Visual Studio/: reaper_drivenbymoss.sln  reaper_drivenbymoss.vcxproj  reaper_drivenbymoss.vcxproj.filters
Xcode/: ReaperUtils.cpp
Xcode/DrivenByMoss4Reaper-Backend.xcodeproj/: project.pbxproj
Xcode/DrivenByMoss4Reaper-Backend.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode/DrivenByMoss4Reaper-Backend.xcodeproj/project.xcworkspace/xcuserdata/mos.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/DrivenByMoss4Reaper-Backend.xcodeproj/xcuserdata/mos.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Xcode/DrivenByMoss4Reaper-Backend.xcodeproj/xcuserdata/mos.xcuserdatad/xcschemes/: DrivenByMoss4Reaper-Backend.xcscheme  xcschememanagement.plist
libraries/WDL/: lineparse.h  wdltypes.h
libraries/WDL/swell/: swell-modstub.mm
libraries/reaper_extension_sdk/jmde/csurf/: RCa02600  UpgradeLog.htm  reaper_csurf.sln  reaper_csurf.vcxproj  reaper_csurf.vcxproj.filters  res.aps  res.rc
reaper_drivenbymoss/: .cproject  .project  ActionProcessor.cpp  ActionProcessor.h  ClipProcessor.cpp  ClipProcessor.h  CodeAnalysis.h  Collectors.h  DataCollector.cpp  DataCollector.h  DeviceProcessor.cpp  DeviceProcessor.h  DrivenByMossExtension.cpp  DrivenByMossExtension.h  DrivenByMossSurface.cpp  DrivenByMossSurface.h  DynamicDialog.cpp  EqDeviceProcessor.cpp  EqDeviceProcessor.h  FunctionExecutor.cpp  FunctionExecutor.h  GrooveProcessor.cpp  GrooveProcessor.h  IniFileProcessor.cpp  IniFileProcessor.h  JvmManager.cpp  JvmManager.h  LocalMidiEventDispatcher.h  MainConfig.cpp  MainConfig.h  Marker.cpp  Marker.h  MarkerProcessor.cpp  MarkerProcessor.h  MastertrackProcessor.cpp  MastertrackProcessor.h  MidiMessages.h  MidiProcessingStructures.h  MidiProcessor.cpp  MidiProcessor.h  (+54 more)
